
syntax = "proto3";

package reviewEngagement;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
message review {
    string id = 1;
    string bookId = 2;
    string userId = 3;
    int32 rating = 4;
    string reviewText = 5;
    int32 status = 6;
    string moderatedByUserId = 7;
}
message recommendation {
    string id = 1;
    string userId = 2;
    repeated string bookIds = 3;
    string generatedBy = 4;
    google.protobuf.Struct contextInfo = 5;
}
message engagementEvent {
    string id = 1;
    string userId = 2;
    string eventType = 3;
    google.protobuf.Timestamp eventTime = 4;
    google.protobuf.Struct details = 5;
    string bookId = 6;
}






message VoidRequest {}

message CurrentUserReply {
    string userId = 1;
    string sessionId = 2;
    string fullname = 3;
    string email = 4;
    string roleId = 5;
    string avatar = 6;
    bool emailVerified = 7;
        string mobile = 8;
    bool mobileVerified = 9;        repeated string userGroupNames = 10;
    repeated string userGroupIdList = 11;string accessToken = 12;
}

message HelloMessageReply {
    string hello = 1;
}

service reviewEngagementService {
    rpc currentUser(VoidRequest) returns (CurrentUserReply);
    rpc helloMessage(VoidRequest) returns (HelloMessageReply);
}